--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+db
+jwt.js
+
 ############################
 # OS X
 ############################
@@ -107,7 +110,6 @@ coverage
 # Strapi
 ############################
 
-.env
 license.txt
 exports
 .cache
