Added categories to articles

--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -21,7 +21,10 @@
     },
     "story": {
       "type": "dynamiczone",
-      "components": ["storyblocks.richtext", "storyblocks.image"]
+      "components": [
+        "storyblocks.richtext",
+        "storyblocks.image"
+      ]
     },
     "summary": {
       "type": "text"
@@ -30,6 +33,13 @@
       "type": "component",
       "repeatable": false,
       "component": "storyblocks.image"
+    },
+    "article_categories": {
+      "via": "articles",
+      "collection": "article-category"
+    },
+    "slug": {
+      "type": "string"
     }
   }
 }
