--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "knex": "<0.20.0",
     "pg": "latest",
+    "slugify": "^1.4.5",
     "strapi": "3.2.4",
     "strapi-admin": "3.2.4",
     "strapi-connector-bookshelf": "3.2.4",
