--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@losol/ckeditor5-build-markdown": "^23.0.0",
     "knex": "<0.20.0",
     "pg": "latest",
     "slugify": "^1.4.5",
