--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "strapi-plugin-upload": "3.2.4",
     "strapi-plugin-users-permissions": "3.2.4",
     "strapi-provider-upload-aws-s3": "^3.2.4",
-    "strapi-utils": "3.2.4"
+    "strapi-utils": "3.2.4",
+    "sqlite3": "5.0.0"
   },
   "author": {
     "name": "A Strapi developer"
